using UnityEngine;


namespace Safari.Model
{
    public class Predator
    {
        
    }
}
