@startuml animalGroup

enum AnimalState{
    RESTING
    WANDERING
    HUNGRY
    THIRSTY
}

abstract class Animal{
    - worldLocation : Vector3
    - currentState : AnimalState
    - age : int
    - hunger : int
    - thirst : int
    + FindNextObjective() : Vector3
}

Animal "1" *-- AnimalState

abstract class Predator extends Animal{

}
class Predator1 extends Predator{
    + MateWith(Predator1) : Predator1
}
class Predator2 extends Predator{
    + MateWith(Predator2) : Predator2
}
abstract class Herbivore extends Animal{

}
class Herbivore1 extends Herbivore{
    + MateWith(Herbivore1) : Herbivore1
}
class Herbivore2 extends Herbivore{
    + MateWith(Herbivore2) : Herbivore2
}



Safari "1" *-- "*" Animal

@enduml